@@ -52,7 +52,9 @@ ScaleContinuous <- proto(Scale, funEnvir = globalenv(), {
     
   # By default, a continuous scale does no transformation in the mapping stage
   # See scale_size for an exception
-  map <- function(., values)  values
+  map <- function(., values) {
+    ifelse(values %inside% .$output_set(), values, NA)
+  }
 
   # By default, the range of a continuous scale is the same as its
   # (transformed) domain
